changed footer and deleted images folder

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,19 @@
   <div class="p2 wrap">
     <div class="measure mt1 center">
       <small>
-        Crafted with &lt;3 by <a href="http://johnotander.com">John Otander</a> (<a href="https://twitter.com/4lpine">@4lpine</a>).<br>
-        &lt;/&gt; available on <a href="https://github.com/johnotander/pixyll">Github</a>.
+        <a rel="license"
+        href="http://creativecommons.org/licenses/by-nd/3.0/de/"><img
+        alt="Creative Commons License" style="border-width:0"
+        src="http://i.creativecommons.org/l/by-nd/3.0/de/80x15.png"
+        /></a><br />This <span xmlns:dct="http://purl.org/dc/terms/"
+        href="http://purl.org/dc/dcmitype/Text" rel="dct:type">work</span>
+        by <span xmlns:cc="http://creativecommons.org/ns#"
+        property="cc:attributionName">sam-d</span> is licensed
+        under a <a rel="license"
+        href="http://creativecommons.org/licenses/by-nd/3.0/de/">Creative
+        Commons Attribution-NoDerivs 3.0 Germany License</a>
+        <p><a href="/impressum.html">Impressum</a> Hosting: <a href="http://www.alfahosting.de/?wmid=samd">Alphahosting</a></p>
+        Theme: <a href="http://pixyll.com/">Pixyll</a> available on <a href="https://github.com/johnotander/pixyll">Github</a>.
       </small>
     </div>
   </div>
