--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
         under a <a rel="license"
         href="http://creativecommons.org/licenses/by-nd/3.0/de/">Creative
         Commons Attribution-NoDerivs 3.0 Germany License</a>
-        <p><a href="/impressum.html">Impressum</a> Hosting: <a href="http://www.alfahosting.de/?wmid=samd">Alphahosting</a></p>
+        <a href="/impressum.html">Impressum</a> Hosting: <a href="http://www.alfahosting.de/?wmid=samd">Alphahosting</a>
         Theme: <a href="http://pixyll.com/">Pixyll</a> available on <a href="https://github.com/johnotander/pixyll">Github</a>.
       </small>
     </div>
